Missing keys added.

--- a/i18n/src/org/netbeans/modules/i18n/Bundle.properties
+++ b/i18n/src/org/netbeans/modules/i18n/Bundle.properties
@@ -12,12 +12,10 @@
 
 ## HelpStringCustomEditor.java (and inner classes)
 LBL_Arguments=Arguments:
+LBL_Arguments_Mnem=g
 #$InitCodeEditor
 LBL_InitCodeFormat=Init Code Format:
 LBL_InitCodeFormat_mne=I
-#$ReplaceCodeEditor
-LBL_ReplaceCodeFormat=Replace Code Format:
-LBL_ReplaceCodeFormat_mne=R
 #$RegExpEditor
 # negation gives all keys and bundle names
 LBL_NonI18nRegExpFormat=Non-Internationalization Regular Expression Format:
@@ -64,7 +62,7 @@ TXT_ReplaceResourceValueDesc=Overrides the values of any existing keys in the re
 TXT_ReplaceCodeFormat=I18n String Format
 TXT_ReplaceCodeFormatDesc=Default code format for constructing internationalized strings.
 
-#I18nPanel
+## I18nPanel.java
 CTL_CancelButton=Cancel
 CTL_CancelButton_Mnem=C
 ACS_CTL_CancelButton=N/A
@@ -73,9 +71,12 @@ CTL_HelpButton_Mnem=H
 ACS_CTL_HelpButton=N/A
 CTL_InfoButton=Info
 ACS_CTL_InfoButton=N/A
+CTL_InfoButton_Mnem=I
 CTL_ReplaceButton=Replace
+CTL_ReplaceButton_Mnem=e
 ACS_CTL_ReplaceButton=N/A
 CTL_SkipButton=Skip
+CTL_SkipButton_Mnem=S
 ACS_CTL_SkipButton=N/A
 LBL_Replace=Replace:
 ACS_I18nPanel=This panel allows you to choose or create a bundle, set the replace string format, and set property keys and values.
@@ -154,25 +155,32 @@ enables you to internationalize all of your Java at once, a test tool, which rep
 set the locale in which the application is to run.
 
 
-#PropertyPanel
+## PropertyPanel.java
 CTL_Format=Format...
 CTL_Format_Mnem=r
 ACS_CTL_Format=N/A
 LBL_Key=Key:
+LBL_Key_Mnem=K
 LBL_ReplaceFormat=Replace String:
 LBL_ReplaceFormat_Mnem=p
 LBL_ReplaceStringFormatEditor=Replace Code Format Editor
 LBL_Value=Value:
+LBL_Value_Mnem=V
 ACS_PropertyPanel=This panel allows you to set  the code format of internationalized strings and set property keys and values.
 ACS_valueText=N/A
 ACS_commentText=N/A
 ACS_replaceFormatTextField=N/A
+LBL_Comment=Comment:
+LBL_Comment_Mnem=t
+LBL_ReplaceCodeFormat=Replace Code Format:
+LBL_ReplaceCodeFormat_mne=R
 
-
-#ResourcePanel
+## ResourcePanel.java
 CTL_BrowseButton=Browse...
+CTL_BrowseButton_Mnem=B
 ACS_CTL_BrowseButton=N/A
 CTL_NewButton=New...
+CTL_NewButton_Mnem=N
 ACS_CTL_NewButton=N/A
 ACS_ResourceText=N/A
 CTL_SelectPropDO_Dialog_RootTitle=&Select:
@@ -180,10 +188,12 @@ CTL_SelectPropDO_Dialog_Title=Select Resource Bundles
 CTL_Template_Dialog_Title=New Bundle
 CTL_Template_Dialog_RootTitle=&Filesystem:
 LBL_BundleName=Bundle Name:
+LBL_BundleName_Mnem=u
 LBL_ResourceTitleBorder=Choose Bundle
 LBL_TemplateName=Object &Name
 ACS_TEXT_ObjectNameInputPanel=N/A
 ACS_ResourcePanel=This panel allows you to create new bundle or open and existing one.
+
 
 #filenames
 Services/org-netbeans-modules-i18n-I18nOptions.settings=Internationalization
