--- a/i18n/src/org/netbeans/modules/i18n/Layer.xml
+++ b/i18n/src/org/netbeans/modules/i18n/Layer.xml
@@ -21,6 +21,12 @@ Microsystems, Inc. All Rights Reserved.
 	</file>
     </folder>
 
+    <folder name="Menu">
+	<folder name="Tools">
+            <file name="org-netbeans-modules-i18n-I18nGroupMenuAction.instance" />
+        </folder>
+    </folder>
+
     <folder name="Actions">
         <folder name="Tools">
             <file name="org-netbeans-modules-i18n-I18nGroupMenuAction.instance" />
