--- a/i18n/build.xml
+++ b/i18n/build.xml
@@ -19,30 +19,22 @@ Microsystems, Inc. All Rights Reserved.
   <property name="dist.base" value="www.netbeans.org/download/nbms/40"/>
   <property name="license.file" value="../nbbuild/standard-nbm-license.txt"/>
   <property name="build.compiler.debug" value="on"/>
-  <property name="build" location="../nbbuild/netbeans"/>
 
   <taskdef name="makenbm" classname="org.netbeans.nbbuild.MakeNBM" classpath="../nbbuild/nbantext.jar"/>
   <taskdef name="genlist" classname="org.netbeans.nbbuild.MakeListOfNBM" classpath="../nbbuild/nbantext.jar"/>
   <taskdef name="locjar" classname="org.netbeans.nbbuild.LocalizedJar" classpath="../nbbuild/nbantext.jar"/>
-
-  <patternset id="i18n.files">
-    <include name="modules/i18n.jar"/>
-  </patternset>
-  <patternset id="i18n-form.files">
-    <include name="modules/eager/i18n-form.jar"/>
-  </patternset>
 
   <target name="compile">
     <javac srcdir="src" destdir="src" deprecation="${build.compiler.deprecation}" debug="${build.compiler.debug}">
       <exclude name="org/netbeans/modules/i18n/form/"/>
       <classpath>
 	<pathelement location="../openide/openide-13javac-workaround.jar"/>
-        <pathelement location="${build}/lib/openide.jar"/>
-        <pathelement location="${build}/modules/autoload/openide-deprecated.jar"/> <!-- XXX -->
-        <pathelement location="${build}/modules/autoload/java-src-model.jar"/>
-        <pathelement location="${build}/lib/core.jar"/>
-        <pathelement location="${build}/modules/properties.jar"/>
-        <pathelement location="${build}/modules/autoload/openide-execution.jar"/>
+        <pathelement location="../openide/netbeans/lib/openide.jar"/>
+        <pathelement location="../openide/deprecated/netbeans/modules/autoload/openide-deprecated.jar"/> <!-- XXX -->
+        <pathelement location="../openide/execution/netbeans/modules/autoload/openide-execution.jar"/>
+        <pathelement location="../java/srcmodel/netbeans/modules/autoload/java-src-model.jar"/>
+        <pathelement location="../core/netbeans/lib/core.jar"/>
+        <pathelement location="../properties/netbeans/modules/properties.jar"/>
         <fileset dir="../core/external">
           <include name="regexp*.jar" />
         </fileset>
@@ -52,11 +44,11 @@ Microsystems, Inc. All Rights Reserved.
       <include name="org/netbeans/modules/i18n/form/"/>
       <classpath>
 	<pathelement location="../openide/openide-13javac-workaround.jar"/>
-        <pathelement location="${build}/lib/openide.jar"/>
-        <pathelement location="${build}/modules/autoload/openide-deprecated.jar"/> <!-- XXX -->
-        <pathelement location="${build}/modules/properties.jar"/>
-        <pathelement location="${build}/modules/form.jar"/>
-        <pathelement location="${build}/modules/java.jar"/>
+        <pathelement location="../openide/netbeans/lib/openide.jar"/>
+        <pathelement location="../openide/deprecated/netbeans/modules/autoload/openide-deprecated.jar"/> <!-- XXX -->
+        <pathelement location="../properties/netbeans/modules/properties.jar"/>
+        <pathelement location="../form/netbeans/modules/form.jar"/>
+        <pathelement location="../java/netbeans/modules/java.jar"/>
         <fileset dir="../core/external">
           <include name="xml-apis*.jar" />
         </fileset>
@@ -67,10 +59,10 @@ Microsystems, Inc. All Rights Reserved.
   </target>
 
   <target name="jars" depends="compile">
-    <mkdir dir="${build}/modules/eager"/>
+    <mkdir dir="netbeans/modules/eager"/>
     <filter token="BUILD_NUMBER_SUBST" value="${buildnumber}"/>
     <copy file="manifest.mf" tofile="manifest-subst.mf" filtering="on"/>
-    <locjar jarfile="${build}/modules/i18n.jar"
+    <locjar jarfile="netbeans/modules/i18n.jar"
             manifest="manifest-subst.mf"
             basedir="src"
 	    excludesfile="../nbbuild/standard-jar-excludes.txt"
@@ -80,7 +72,7 @@ Microsystems, Inc. All Rights Reserved.
       <locale name="ja"/>
     </locjar>
     <copy file="manifest-form.mf" tofile="manifest-form-subst.mf" filtering="on"/>
-    <locjar jarfile="${build}/modules/eager/i18n-form.jar"
+    <locjar jarfile="netbeans/modules/eager/i18n-form.jar"
             manifest="manifest-form-subst.mf"
             basedir="src"
 	    excludesfile="../nbbuild/standard-jar-excludes.txt"
@@ -93,30 +85,14 @@ Microsystems, Inc. All Rights Reserved.
   </target>
 
   <target name="netbeans" depends="jars">
-      <genlist outputfiledir="${build}" module="modules/i18n.jar">
-          <fileset dir="${build}">
-	      <patternset refID="i18n.files"/>
-          </fileset>
-      </genlist>
-      <genlist outputfiledir="${build}" module="modules/eager/i18n-form.jar">
-          <fileset dir="${build}">
-	      <patternset refID="i18n-form.files"/>
-          </fileset>
-      </genlist>
+    <genlist targetname="nbm" outputfiledir="netbeans"/>
   </target>
 
   <target name="nbm" depends="netbeans">
+    <!-- XXX i18n-form.jar should have its own NBM -->
     <makenbm file="i18n.nbm"
-             productDir="${build}"
-             module="modules/i18n.jar"
-	     homepage="http://i18n.${homepage.base}/"
-	     distribution="http://${dist.base}/i18n.nbm">
-      <license file="${license.file}"/>
-      <signature keystore="${keystore}" storepass="${storepass}" alias="${nbm_alias}"/>
-    </makenbm>
-    <makenbm file="i18n-form.nbm"
-             productDir="${build}"
-             module="modules/eager/i18n-form.jar"
+             topdir="."
+             module="netbeans/modules/i18n.jar"
 	     homepage="http://i18n.${homepage.base}/"
 	     distribution="http://${dist.base}/i18n.nbm">
       <license file="${license.file}"/>
@@ -129,18 +105,13 @@ Microsystems, Inc. All Rights Reserved.
       <fileset dir="src">
         <include name="**/*.class"/>
       </fileset>
-      <fileset dir="${build}">
-        <patternset refID="i18n.files"/>
-      </fileset>
-      <fileset dir="${build}">
-        <patternset refID="i18n-form.files"/>
-      </fileset>
     </delete>
     <delete file="manifest-subst.mf"/>
     <delete file="manifest-form-subst.mf"/>
     <delete file="i18n.nbm"/>
-    <delete file="i18n-form.nbm"/>
+    <delete dir="netbeans"/>
     <delete dir="javadoc"/>
+    <delete dir="Info"/>
   </target>
 
   <target name="javadoc" description="Build i18n module API documentation.">
