--- a/i18n/build.xml
+++ b/i18n/build.xml
@@ -30,10 +30,10 @@ Microsystems, Inc. All Rights Reserved.
       <classpath>
 	<pathelement location="../openide/openide-13javac-workaround.jar"/>
         <pathelement location="../openide/netbeans/lib/openide.jar"/>
-        <pathelement location="../openide/deprecated/netbeans/modules/autoload/openide-deprecated.jar"/> <!-- XXX -->
         <pathelement location="../openide/execution/netbeans/modules/autoload/openide-execution.jar"/>
         <pathelement location="../java/srcmodel/netbeans/modules/autoload/java-src-model.jar"/>
         <pathelement location="../core/netbeans/lib/core.jar"/>
+        <pathelement location="../core/javahelp/netbeans/modules/autoload/javahelp-api.jar"/>
         <pathelement location="../properties/netbeans/modules/properties.jar"/>
         <fileset dir="../core/external">
           <include name="regexp*.jar" />
@@ -45,7 +45,6 @@ Microsystems, Inc. All Rights Reserved.
       <classpath>
 	<pathelement location="../openide/openide-13javac-workaround.jar"/>
         <pathelement location="../openide/netbeans/lib/openide.jar"/>
-        <pathelement location="../openide/deprecated/netbeans/modules/autoload/openide-deprecated.jar"/> <!-- XXX -->
         <pathelement location="../properties/netbeans/modules/properties.jar"/>
         <pathelement location="../form/netbeans/modules/form.jar"/>
         <pathelement location="../java/netbeans/modules/java.jar"/>
