Vertical gradient with new colors for updater in 6.5.

--- a/ide.branding/autoupdate/libsrc/org/netbeans/updater/Bundle_nb.properties
+++ b/ide.branding/autoupdate/libsrc/org/netbeans/updater/Bundle_nb.properties
@@ -38,16 +38,16 @@
 # made subject to such option by the copyright holder.
 
 UpdaterFrame.Background_R=139
-UpdaterFrame.Background_G=177
-UpdaterFrame.Background_B=184
+UpdaterFrame.Background_G=175
+UpdaterFrame.Background_B=181
 
-UpdaterFrame.outerColor_R=132
-UpdaterFrame.outerColor_G=169
-UpdaterFrame.outerColor_B=199
+UpdaterFrame.centerColor_R=139
+UpdaterFrame.centerColor_G=175
+UpdaterFrame.centerColor_B=181
 
-UpdaterFrame.centerColor_R=167
-UpdaterFrame.centerColor_G=195
-UpdaterFrame.centerColor_B=201
+UpdaterFrame.outerColor_R=194
+UpdaterFrame.outerColor_G=212
+UpdaterFrame.outerColor_B=218
 
-UpdaterFrame.isGradient=false
-
+UpdaterFrame.isGradient=true
+UpdaterFrame.isGradientVertical=true
