--- a/languages/nbproject/project.properties
+++ b/languages/nbproject/project.properties
@@ -3,6 +3,8 @@ javac.compilerargs=-Xlint:unchecked
 javac.source=1.5
 javadoc.arch=${basedir}/arch.xml
 spec.version.base=1.88.0
+test.config.stable.includes=\
+    org/netbeans/test/languages/*Test.class
 test.config.functional.includes=\
     org/netbeans/test/languages/*Test.class
 test.unit.run.cp.extra=${netbeans.dest.dir}/ide8/modules/org-netbeans-modules-editor-lib2.jar:\
