--- a/maven.samples/samples_src/MavenScrumToys/src/main/resources/i18n_en_US.properties
+++ b/maven.samples/samples_src/MavenScrumToys/src/main/resources/i18n_en_US.properties
@@ -246,7 +246,7 @@ menuitem.label.irc=IRC
 menuitem.label.documentation=Documentation
 menuitem.path.irc=http://weblogs.java.net/blog/edburns/archive/2007/01/jsf_irc_channel.html
 menuitem.path.jsr314=http://www.jcp.org/en/jsr/detail?id=314#
-menuitem.path.about=http://www.globalcode.com.br/site/noticias/jsf2scrumdemo.seam
+menuitem.path.about=http://www.globalcode.com.br/noticias/jsf2scrumdemo
 menuitem.path.documentation=http://java.sun.com/javaee/javaserverfaces/
 task.form.label.sprint.name=Sprint
 task.show.nostory=Select a Story first
