--- a/languages.apacheconf/src/org/netbeans/modules/languages/apacheconf/resources/Bundle.properties
+++ b/languages.apacheconf/src/org/netbeans/modules/languages/apacheconf/resources/Bundle.properties
@@ -3,7 +3,7 @@ OpenIDE-Module-Long-Description=\
     Support for editing Apache Conf files.
 OpenIDE-Module-Name=Apache Conf File Editor Support
 OpenIDE-Module-Short-Description=Support for editing Apache Conf files.
-Templates/Other/ApacheConfTemplate.conf=Apache Conf file
+Templates/Other/ApacheConfTemplate.conf=Apache Conf File
 Loaders/text/x-apache-conf/Factories/ApacheConfDataLoader.instance=Apache Conf Files
 
 text/x-apache-conf=Apache Conf file
