--- a/languages.neon/src/org/netbeans/modules/languages/neon/resources/Bundle.properties
+++ b/languages.neon/src/org/netbeans/modules/languages/neon/resources/Bundle.properties
@@ -3,7 +3,7 @@ OpenIDE-Module-Long-Description=\
     Support for editing NEON files.
 OpenIDE-Module-Name=NEON File Editor Support
 OpenIDE-Module-Short-Description=Support for editing NEON files.
-Templates/Other/NeonTemplate.neon=Neon file
+Templates/Other/NeonTemplate.neon=Neon File
 Loaders/text/x-neon/Factories/NeonDataLoader.instance=Neon Files
 
 text/x-neon=Neon file
